<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="center_header">Current Set:</string>
	<string name="app_name">Push the Planet</string>
	<string name="main_title">Ready to Begin?</string>
	<string name="title_activity_push">Push the Planet</string>
	<string name="start_label">Begin</string>
	<string name="stats_label">Statistics</string>
	<string name="settings_label">Settings</string>
	<string name="exit_label">Exit</string>
	<string name="menu_settings">Settings</string>
	<string name="about_label">About</string>
	<string name="about_title">About using this app</string>
	<string name="about_text">\
		This app measures physical fitness and improvement
		over a 6 week period using push ups.  1 week is 
		3 days of working out, with a day of rest in between.
		You will have completed 1,270 push ups by the end of 
		this work out program.  The goal is to be able to 
		perform 100 consecutive push ups at the end of the 6
		week time period.</string>
	<string name="hello_world">Hello world!</string>
	<string name="title_activity_about">About</string>
	<string name="title_activity_start">Start</string>
	<string name="title_activity_stats">Statistics</string>
	<string name="start_description"></string>
	<string name="stats_description">\
		Statistical data goes here.  Such as total number of pushups
		executed and % of total workout program completed.</string>
	<string name="settings_description">Settings page</string>
	<string name="title_activity_settings">Settings</string>
	<string name="clear_data">Clear All Data</string>
	<string name="close_label">Close</string>
	<string name="done_label">Done</string>
	<string name="stop_label">Stop</string>
	<string name="reps_label">Reps go here</string>
	<string name="center_label"></string>
	<string name="title_activity_timer">Time To Rest</string>
	<string name="sets_label">Sets to Complete:</string>
	<string name="title_activity_save_workout">Save Workout</string>
	<string name="WouldYou_label">Would you like to</string>
	<string name="save_exit_label">Save or Exit:</string>
	<string name="save_label">Save</string>
	<string name="title_activity_congrats">Congratulations!</string>
	<string name="week4_label">Week 4</string>
	<string name="reset_label">Reset</string>
	<string name="congrats_label">\
		Good job!  You have completed all 6 weeks.
		Rest up for 2 days and then try for a 100 consecutive
		push ups.  Don\'t worry if you can\'t make it the first time,
		it takes some work.  Press Reset to start over at the
		very beginning.  Press Week 4 to start from the beginning
		of Week 4.</string>
	<string name="title_activity_clear_data">Clear All Data?</string>
	<string name="you_sure_label">\
		This will reset the app to the first week.  
		Press Reset to start over.  Press the back button to cancel.</string>
	<string name="pushups_done">Total Number of Pushups Done</string>
	<string name="percentage_done">Percentage of total workout completed</string>

</resources>