<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/gradients"
	android:gravity="center"
	android:orientation="vertical" >

	<TextView
		android:id="@+id/date_header"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/start_description"
		android:textSize="15sp"
		tools:context=".Start" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dip"
		android:layout_weight="0.86"
		android:gravity="center"
		android:orientation="vertical"
		android:padding="10dip" >

		<TextView
			android:id="@+id/center_header"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:padding="10dip"
			android:text="@string/center_header"
			android:textSize="20sp" />

		<TextView
			android:id="@+id/center_content"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal|center_vertical"
			android:padding="80dip"
			android:text="@string/center_label"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textSize="90sp" />

		<TextView
			android:id="@+id/complete_sets"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal|bottom"
			android:padding="5dip"
			android:text="@string/sets_label"
			android:textSize="20sp" />

		<TextView
			android:id="@+id/reps_list"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal|bottom"
			android:padding="10dip"
			android:text="@string/reps_label"
			android:textSize="20sp" />

		<Button
			android:id="@+id/rep_done"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal|bottom"
			android:padding="15dip"
			android:text="@string/done_label" />
	</LinearLayout>

</LinearLayout>